--- a/index.html
+++ b/index.html
@@ -1509,9 +1509,6 @@ const apiMonitoring = {
 
 	
 
-let debounceTimer;
-	
-// Sistema di gestione stato API
 const performSearch = async () => {
     const query = searchInput.value.trim();
     if (!query) {
@@ -1519,20 +1516,20 @@ const performSearch = async () => {
         return;
     }
     try {
-        const response = await fetch(https://www.googleapis.com/books/v1/volumes?q=${encodeURIComponent(query)}&key=${config.googleBooks.apiKey}&maxResults=5);
+        const response = await fetch(`https://www.googleapis.com/books/v1/volumes?q=${encodeURIComponent(query)}&key=${config.googleBooks.apiKey}&maxResults=5`);
         const data = await response.json();
         if (data.items && data.items.length > 0) {
             resultsDiv.innerHTML = data.items.map(book => {
                 const info = book.volumeInfo;
-                return 
+                return `
                     <div class="p-3 hover:bg-gray-50 cursor-pointer border-b last:border-b-0 transition-colors duration-150" onclick="selectBook(this, ${JSON.stringify({ title: info.title || '', authors: info.authors ? info.authors.join(', ') : '', publisher: info.publisher || '', year: info.publishedDate ? info.publishedDate.substring(0, 4) : '', isbn: info.industryIdentifiers ? info.industryIdentifiers.find(id => id.type === 'ISBN_13')?.identifier || info.industryIdentifiers.find(id => id.type === 'ISBN_10')?.identifier || '' : '' }).replace(/"/g, '&quot;')})">
                         <div class="font-medium text-blue-600">${info.title || 'Titolo sconosciuto'}</div>
                         <div class="text-sm text-gray-600">
                             ${info.authors ? info.authors.join(', ') : 'Autore sconosciuto'}
-                            ${info.publishedDate ? (${info.publishedDate.substring(0, 4)}) : ''}
+                            ${info.publishedDate ? `(${info.publishedDate.substring(0, 4)})` : ''}
                         </div>
                     </div>
-                ;
+                `;
             }).join('');
             resultsDiv.classList.remove('hidden');
         } else {
@@ -1549,7 +1546,7 @@ const performSearch = async () => {
 // Add input event with debounce
 searchInput.addEventListener('input', () => {
     clearTimeout(debounceTimer);
-    debounceTimer = setTimeout(performSearch, 800); // Delay of 800ms 
+    debounceTimer = setTimeout(performSearch, 800); // Delay of 800ms
 });
 
 searchBtn.addEventListener('click', performSearch);
@@ -1557,7 +1554,6 @@ searchBtn.addEventListener('click', performSearch);
 searchInput.addEventListener('keypress', (e) => {
     if (e.key === 'Enter') performSearch();
 });
-
 
 
 	
