--- a/index.html
+++ b/index.html
@@ -724,11 +724,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
         
-html
+
 <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg mt-2">
     <div class="flex flex-col mb-10 text-left space-y-4 px-4">
         <div class="flex items-center gap-2 mb-2">
-            <a href="https://www.openstreetmap.org/relation/9586281" 
+            <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18&relation=1460885" 
                target="_blank" 
                title="Visualizza la posizione sulla mappa">
                 <img alt="Posizione" 
