--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg mt-2">
     <div class="flex flex-col mb-10 text-left space-y-4 px-4">
         <div class="flex items-center gap-2 mb-2">
-            <a href="https://www.openstreetmap.org/relation/1460885/full?relation_layers=true#map=13/41.7325/12.2719&mlat=41.7325117&mlon=12.2718834" 
+            <a href="https://www.openstreetmap.org/?relation=1460885&layers=R&mlat=41.7325117&mlon=12.2718834&zoom=13" 
                target="_blank" 
                title="Visualizza la posizione sulla mappa">
                 <img alt="Posizione" 
