--- a/mappa.html
+++ b/mappa.html
@@ -107,7 +107,7 @@
                     };
                     legend.addTo(map);
 
-                    // Disegna i poligoni per ogni municipio
+                    // Disegna i confini e i poligoni per ogni municipio
                     relations.forEach((rel, index) => {
                         const municipioWays = rel.members
                             .filter(m => m.type === "way")
@@ -121,19 +121,25 @@
                                     return [node.lat, node.lon];
                                 });
                                 polygonCoordinates.push(coordinates);
+
+                                // Disegna il confine
+                                L.polyline(coordinates, {
+                                    color: colors[index % colors.length],
+                                    weight: 3,
+                                    opacity: 0.7
+                                }).addTo(map);
                             }
                         });
 
                         if (polygonCoordinates.length > 0) {
-                            const polygon = L.polygon(polygonCoordinates, {
-                                color: colors[index % colors.length],
-                                weight: 2,
-                                opacity: 0.7,
-                                fillOpacity: 0.3
-                            }).addTo(map);
-
                             const nome = rel.tags.name || `Municipio ${index + 1}`;
-                            polygon.bindPopup(nome);
+                            // Aggiungi il poligono invisibile e interattivo
+                            L.polygon(polygonCoordinates, {
+                                color: 'transparent',
+                                fillColor: 'transparent',
+                                weight: 0,
+                                fillOpacity: 0
+                            }).addTo(map).bindPopup(nome);
                         }
                     });
                 }
